--- a/ASPPRODUCT.csproj
+++ b/ASPPRODUCT.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10"/>
+    <PackageReference Include="AutoMapper" Version="12.0.0"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1"/>
   </ItemGroup>
 </Project>
